[package]
name = "transform_5e_tools_to_chazz"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"
log = "0.4"
structopt = "0.3"
clap-verbosity-flag = "0.3"
lazy_static = "1"